--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="Games by the UniMelb Game Makers Club"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/stego-favicon.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Stego Studios</title>
   </head>
